resolved cutoff in small screen in View Job page

--- a/src/components/Job/Job.scss
+++ b/src/components/Job/Job.scss
@@ -2,9 +2,7 @@
 
 .job {
     display: flex;
-    justify-content:space-between ;
-    flex-direction: row;
-    align-items: center;   
+    flex-direction: column;
     border-radius: $border-radius-small;
     @include box-shadow-reg;
     background: rgb(250, 250, 250);
@@ -12,10 +10,10 @@
     width: 90%;
     margin:2em auto;
 
-
     img {
         height: 17vw;
-        width: auto;
+        width: 40%;
+        margin: auto;
       }
 
     .more-details{
@@ -26,6 +24,10 @@
         display: none;
     }
 
+    ul {
+      margin: 1em;
+    }
+
     ul li {
         margin-left: 1em;
         line-height: 1.5em;
@@ -33,17 +35,18 @@
 
     a {
         @include green-button;
-        margin: 1em;
+        text-align: center;
+        width: 20%;
+        margin: 1.2em auto;
     }
 
-    .arrow
-{
-  position: relative;
-  bottom: -1rem;
-  left: 50%;
-  margin-left:-20px;
-  width: 2em;
-  height: 2em;
+    .arrow {
+        position: relative;
+        bottom: -1rem;
+        left: 50%;
+        margin-left:-20px;
+        width: 2em;
+        height: 2em;
 
   /**
    * Dark Arrow Down
@@ -68,4 +71,24 @@
   }
 }
     
+}
+
+@media screen and (min-width: 600px) {
+  .job {
+    display: flex;
+    justify-content:space-between ;
+    flex-direction: row;
+    align-items: center;   
+    border-radius: $border-radius-small;
+    @include box-shadow-reg;
+    background: rgb(250, 250, 250);
+    padding: 1em;
+    width: 90%;
+    margin:2em auto;
+
+    img {
+        height: 17vw;
+        width: auto;
+      }
+  }
 }
