--- a/src/routes/LandingPage/LandingPage.scss
+++ b/src/routes/LandingPage/LandingPage.scss
@@ -10,7 +10,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom-right-radius: 40px;
 
     h2 {
       color: rgb(230, 230, 230);
